dutyroster-edit-modal-error-issue

--- a/packages/apps/admin/src/container/DepartmentDutyRoster/department-duty-roster.scss
+++ b/packages/apps/admin/src/container/DepartmentDutyRoster/department-duty-roster.scss
@@ -201,7 +201,7 @@
 
     .time-error {
         color: $danger;
-        margin-top: -30px;
+        // margin-top: -30px;
         // margin-left:25%;
         font-weight: 400;
         font-size: 12px;
