--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -97,7 +97,7 @@
         margin-right: -4px;
         
         .dropdown-menu {
-            width        : 300px;
+            width        : 360px;
             top          : -6px;
             // max-height  :420px;
             // overflow: auto;
@@ -118,7 +118,7 @@
                     position     : absolute;
                     display      : block;
                     top          : -6px;
-                    left           :110px;
+                    left         :180px;
 
                 }
 
@@ -407,5 +407,29 @@
                 padding: 12px 0 10px 0;
             }
         }
+    }
+
+    .quick-links{
+
+        .dropdown-menu {
+            width           : auto;
+            margin-top:10px;
+            min-width       : 220px;
+            border          : none;        
+            box-shadow      : 0px 4px 2px 0px $gray-400;
+            padding         : 0px;
+            background-color: $white;
+            @include border-radius(5px !important);
+        }
+
+        .add-fav{
+            margin:2px;
+            width:auto;
+            height:25px;
+            float: right;
+            @include border-radius(2px  !important );
+        }
+
+
     }
 }
