--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -504,6 +504,14 @@
             border:none;
             border-bottom:1px solid $gray-300;
             @include border-radius(0);
+       @include transition(all,0.8s,ease);
+    //    -webkit-transition: all 0.8s ease;
+    //    -moz-transition: all 0.8s ease;
+    //    transition: all 0.8s ease;
+
+            &:focus{
+               color:$gray-900;
+            }
         }
 
         button,span{
@@ -511,6 +519,8 @@
             border-bottom:1px solid $gray-300;
             @include border-radius(0);
             background-color: transparent;
+
+           
         }
       }
 
@@ -522,6 +532,7 @@
         padding: 4px 6px;
         align-items: center;
         width:100%;
+        @include transition(all,0.9s,ease);
 
         .anchor-icon {
             width: 32px;
