--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -337,12 +337,12 @@
 
         .add-bar {     
             width: 100%;
-            height: 40px;
+            height: auto;
             background-color: $gray-100;
             border-top: 1px solid $gray-100;
             text-align: center;
             background-color: $white;
-            padding-top:6px;
+            padding: 9px 0;
 
             .add-new-fav {         
               
