--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -55,6 +55,13 @@
          width: 16px;
          height: 16px;
        }
+
+       .status-legend{
+        display:inline-flex;
+        flex-direction:column;
+        align-items: center;
+      }
+
  
        a {
  
