--- a/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatusByDepartment/appointment-status.scss
@@ -55,6 +55,13 @@
         height: 16px;
       }
 
+      .status-legend{
+        display:inline-flex;
+        flex-direction:column;
+        align-items: center;
+      }
+
+
       a {
 
         color: $gray-600;
