--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -53,6 +53,12 @@
         height: 16px;
       }
 
+      .status-legend{
+        display:inline-flex;
+        flex-direction:column;
+        align-items: center;
+      }
+
       a {
 
         color: $gray-600;
