--- a/packages/common-sass-client/src/scss/custom.scss
+++ b/packages/common-sass-client/src/scss/custom.scss
@@ -14,7 +14,7 @@
 
 
 // Custom Mixins
-//@import "custom-mixins";
+@import "custom-mixins";
 
 // Custom Utility classes
 @import "custom-utilities";
