--- a/packages/common-sass-client/src/scss/mixins/_borders.scss
+++ b/packages/common-sass-client/src/scss/mixins/_borders.scss
@@ -53,3 +53,12 @@
     -o-transition:      $what $time $how;
     transition:         $what $time $how;
 }
+
+@mixin centerer {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width:auto;
+  }
+  
