--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -211,15 +211,16 @@
  }
  
  .btn-checkin {
-   width: 100%;
-   padding: 6px 0 !important;
-   margin-top: 10px;
-   margin-bottom: 20px;
- 
-   i {
-     color: $white;
-   }
- }
+  width:136px;
+  padding: 8px 0 !important;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  display:block;
+
+  i {
+    color: $white;
+  }
+}
  
  .time-container {
  
