--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -34,7 +34,7 @@
 
 
     .hospital-list{
-        width:200px;
+        width:240px;
         float:right;
 
         .hospital-list-input{
@@ -81,6 +81,10 @@
                     }
                     }
 
+            }
+
+            .css-g1d714-ValueContainer{
+                padding:0;
             }
 
 
