--- a/packages/apps/admin/src/container/CompanySetupAdmin/admin-setup.scss
+++ b/packages/apps/admin/src/container/CompanySetupAdmin/admin-setup.scss
@@ -29,6 +29,7 @@
      .image-box{
         img{
             width:140px;
+            height: 140px;
             @include border-radius(50%);
         }
 
