--- a/packages/apps/admin/src/container/AdminSetup/admin-setup.scss
+++ b/packages/apps/admin/src/container/AdminSetup/admin-setup.scss
@@ -37,6 +37,7 @@
      .image-box{
         img{
             width:140px;
+            height: 140px;
             @include border-radius(50%);
         }
 
