--- a/packages/apps/client/src/container/ClientDoctorSetup/DoctorHoc.scss
+++ b/packages/apps/client/src/container/ClientDoctorSetup/DoctorHoc.scss
@@ -29,6 +29,7 @@ h5.title{
       .image-box{
          img{
              width:140px;
+             height:140px;
              @include border-radius(50%);
          }
  
