--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -238,7 +238,8 @@
                 margin-bottom: 13px;
                 left: 8px;
                 width: 120px;
-                border-radius: 50%;
+                height: 120px;
+                @include border-radius(50%);
             }
 
             .user-name {
@@ -381,7 +382,7 @@
 
                 i{
                     width:40px;
-                    padding-left:7px;
+                    padding-left:12px;
                     color:$gray-600;
                 }
             }
@@ -390,7 +391,7 @@
         .dropdown-menu {
             width: auto;
             margin-top: 10px;
-            min-width: 220px;
+            min-width: 260px;
             border: none;
             box-shadow: 0px 4px 2px 0px $gray-400;
             padding: 0px;
@@ -401,7 +402,7 @@
         .menu-link {
             display: flex;
             flex-direction: row;
-            padding: 4px 6px;
+            padding: 4px 10px;
             align-items: center;
 
             .anchor-icon {
@@ -462,7 +463,7 @@
  .menu-link {
             display: flex;
             flex-direction: row;
-            padding: 4px 6px;
+            padding: 4px 10px;
             align-items: center;
 
             .anchor-icon {
@@ -529,18 +530,29 @@
    }
 
    .modal-header .close{
-       margin-right:-10px;
+       margin-right:-5px;
+   }
+
+   .modal-content .modal-body{
+       padding:25px 15px 25px 15px;
+   }
+
+   #scrollbar_add-fav-scrollbar{
+       height: 250px;
    }
 
     #fav-search {
-        padding-bottom:14px;
+        // padding-bottom:14px;
         border-bottom:1px solid $gray-100;
+        padding:0 15px 14px;
 
         input{
             border:none;
+            padding-left:7px;
+            // margin:0 15px;
             border-bottom:1px solid $gray-300;
             @include border-radius(0);
-       @include transition(all,0.8s,ease);
+            @include transition(all,0.8s,ease);
     //    -webkit-transition: all 0.8s ease;
     //    -moz-transition: all 0.8s ease;
     //    transition: all 0.8s ease;
@@ -565,10 +577,11 @@
     .menu-link {
         display: flex;
         flex-direction: row;
-        padding: 4px 6px;
+        padding: 4px 21px;
         align-items: center;
         width:100%;
         @include transition(all,0.9s,ease);
+        // @include border-radius(6px);
 
         .anchor-icon {
             width: 32px;
