--- a/packages/common-sass/src/scss/pages/_login.scss
+++ b/packages/common-sass/src/scss/pages/_login.scss
@@ -55,6 +55,18 @@ transform: translateY(-50%);
 .login-header{
  text-align: center;
  padding-bottom:10px;
+
+ .logo-image{
+   padding:30px 0 15px;
+ }
+
+ p{
+    font-size: 16px;
+    // font-weight: 500;
+    color:$gray-700;
+     margin-bottom:8px;
+    
+ }
 }
 
 .field-wrapper{
