--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -210,12 +210,21 @@
   width:136px;
   padding: 8px 0 !important;
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   display:block;
 
   i {
     color: $white;
   }
+}
+
+
+.btn-transfer{
+  width:136px;
+  padding: 8px 0 !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display:block;
 }
 
 .time-container {
