--- a/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
+++ b/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
@@ -49,7 +49,7 @@
     }
 
     .badge {
-        width         : auto;
+        width         : 32px;
         height        : auto;
         // top        :50%;
         // left       :50%;
@@ -58,11 +58,12 @@
         vertical-align: middle;
         font-size     : 0.65rem;
         line-height   : 0.8rem;
-        padding       : 6px 8px;
+        padding       : 6px auto;
         
         text-transform: uppercase;
         @include border-radius(4px);
     }
+
     
     #status-link-button {
         color: $gray-600;
