--- a/packages/apps/client/src/container/ClientAppointmentRefund/appointment-refund.scss
+++ b/packages/apps/client/src/container/ClientAppointmentRefund/appointment-refund.scss
@@ -25,19 +25,22 @@
 
   }
 
-  .badge{
-    width:35px;
-    height: 35px;
-    // top:50%;
-    // left:50%;
-    // transform:translate(-50%,-50%);
-    text-align: center;
+  .badge {
+    width         : 32px;
+    height        : auto;
+    // top        :50%;
+    // left       :50%;
+    // transform  :translate(-50%,-50%);
+    text-align    : center;
     vertical-align: middle;
-    font-size: 16px;
-    line-height: 22px;
-    padding:6px;
-    @include border-radius(50%);
-  }
+    font-size     : 0.65rem;
+    line-height   : 0.8rem;
+    padding       : 6px auto;
+    
+    text-transform: uppercase;
+    @include border-radius(4px);
+}
+
 
   .total-amount {
     display: block;
