--- a/packages/common-sass/src/scss/pages/_login.scss
+++ b/packages/common-sass/src/scss/pages/_login.scss
@@ -136,6 +136,13 @@ flex-direction:column;
   display: none;
 }
 
+// .ribbon{
+//   position: absolute;
+//   top:20px;
+//   left:-40px;
+//   background-color: $primary;
+// }
+
 //////////////////
 //for new password 
 /////////////////
@@ -328,3 +335,59 @@ h1 {
   font-size:24px;
 }
 }
+
+//** ribbon **//
+.box {
+  width: 200px; height: 300px;
+  position: relative;
+  border: 1px solid #BBB;
+  background: #EEE;
+}
+.ribbon {
+  position: absolute;
+  left: -5px; top: -5px;
+  z-index: 1;
+  overflow: hidden;
+  width: 75px; height: 75px;
+  text-align: right;
+}
+.ribbon span {
+  font-size: 10px;
+  font-weight: regular;
+  color: #FFF;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 20px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  width: 100px;
+  display: block;
+  background: $primary;
+  // background: linear-gradient(#0043ffd9 0%, #0063ff 100%);
+  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+  position: absolute;
+  top: 19px; 
+  right: -4px;
+}
+.ribbon span::before {
+  content: "";
+  position: absolute; left: 0px; top: 100%;
+  z-index: -1;
+  border-left: 3px solid $primary;
+  border-right: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  border-top: 3px solid $primary;
+}
+.ribbon span::after {
+  content: "";
+  position: absolute; right: 0px; top: 100%;
+  z-index: -1;
+  border-left: 3px solid transparent;
+  border-right: 3px solid $primary;
+  border-bottom: 3px solid transparent;
+  border-top: 3px solid $primary;
+}
+
+
+
+
