--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -233,13 +233,68 @@
             color: $gray-800;
 
             .avatar {
-                // position  : absolute;
-                margin-top: 15px;
-                margin-bottom: 13px;
+                position: relative;
+                margin: 15px auto 13px;
                 left: 8px;
-                width: 120px;
-                height: 120px;
-                @include border-radius(50%);
+                width: 100px;
+                height: 100px;
+               
+
+                img{
+                    width:100px;
+                    height: 100px;
+                    @include centerer;
+                    border:1px solid $gray-200;
+                    @include border-radius(50%);
+                }
+
+                &::before{
+                    position: absolute;
+                    content: "";
+                    width:100%;
+                    height: 100%;
+                    top:0;
+                    right:0;
+                    bottom:0;
+                    left:0;                    
+                    z-index: 9;  
+                    @include border-radius(50%); 
+                    opacity: 0;   
+                    transition:all 0.2s ease-in;  
+
+                            
+                }
+
+                &::after{                   
+                    font-family: 'FontAwesome';
+                    top: 0;
+                    left: 10px;
+                    content: "\f030";
+                    font-size:24px;
+                    color:white;
+                    @include centerer;
+                    opacity: 0;
+                    transition:all 0.2s ease-in;  
+                    z-index: 999;
+
+                    
+                }
+
+                &:hover{
+                    cursor:pointer;
+                    &::before{
+                        opacity: 0.8;
+                        background-color: $gray-600;
+                        transition:all 0.3s ease-in-out;
+                        border:1px solid rgba($primary,0.2);
+                    }
+
+                    &::after{
+                        opacity:1;
+                    }
+                }
+
+
             }
 
             .user-name {
