--- a/packages/apps/admin/src/container/CompanySetupAdmin/admin-setup.scss
+++ b/packages/apps/admin/src/container/CompanySetupAdmin/admin-setup.scss
@@ -61,7 +61,7 @@
  .data-image{
      width:40px;
      height: 40px;
-     @include border-radius(50%);
+     @include border-radius(4px);
      overflow: hidden;
      img{
         width:40px;
