--- a/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -98,13 +98,13 @@
            margin-right:10px;
            flex-shrink: 0;
            line-height: 30px;
-        //    @include border-radius(4px !important) ;
+           @include border-radius(4px !important) ;
            
 
            img{
                  width:100%;
                height: auto;
-            //    @include border-radius(4px !important) ;
+               @include border-radius(4px !important) ;
            }
         }
 
