--- a/packages/common-sass-client/src/scss/custom-components/_aggrid.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid.scss
@@ -148,7 +148,7 @@ body {
 .data-image {
   width: 40px;
   height: 40px;
-  border-radius: 50%;
+  border-radius: 4px;
   overflow: hidden;
 
   img {
