--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -84,19 +84,19 @@
         flex-direction: row;
         // display: none;
         .data-image{
-            margin-top:2px;
+          margin-top:2px;
            width:36px;
            height: 36px;
            margin-right:10px;
            flex-shrink: 0;
            line-height: 30px;
-        //    @include border-radius(4px !important) ;
+          @include border-radius(4px !important) ;
            
 
            img{
                  width:100%;
                height: auto;
-            //    @include border-radius(4px !important) ;
+             @include border-radius(4px !important) ;
            }
         }
 
