--- a/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
+++ b/packages/apps/client/src/container/ClientAppointmentApproval/appointment-approval.scss
@@ -63,8 +63,8 @@
 .patient-box {
     //border:1px solid $gray-300;
     @include border-radius(0.5rem);
-    padding: 15px 0;
-    margin: 0 -15px 15px;
+    padding:  0;
+    margin: 0 -15px 0px;
 }
 
 .box {
