--- a/packages/apps/client/src/container/ClientTransferLog/transfer-log.scss
+++ b/packages/apps/client/src/container/ClientTransferLog/transfer-log.scss
@@ -60,8 +60,8 @@
     border:1px solid $gray-300;
     
     @include border-radius(0.5rem);
-    padding:15px 0;
-    margin:0 -15px 15px;
+    padding: 0;
+    margin:0 -15px 0px;
 }
 
 .box{
